--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.10",
     "commander": "^8.3.0",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
